# tflite-cpp

./: CMakeLists.txt  README.md
examples/: test_app.cpp
